resources/public-dashboard.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-dashboard
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: dashboard.k8s.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
